Finalizado el header con diseño azul

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div id="container">
-      <div id="header">header del blogpost</div>
+      <div id="header">
+        Hyperblog
+        <span id="tagline">Tu blog de confianza</span>
+      </div>
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>
