--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
       <div id="header">
         Hyperblog
-        <span id="tagline">Tu blog de confianza</span>
+        <span id="tagline">Tu blog maestro</span>
       </div>
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -24,6 +24,7 @@
           Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un
           rockstar. Pero estadísticamente no lo eres... Por ahora.
         </p>
+        <p>Suscribete y dale like</p>
       </div>
     </div>
   </body>
