--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>
-          Este es el parrafo de inicio donde vamos a explicar las cosas
-          increibles que se pueden hacer con ramas
+          Este es el párrafo de inicio donde vamos a explicar las cosas
+          increíbles que se pueden hacer con ramas y solucionar errores.
         </p>
         <p>
           Los blogs son la mejor forma de compartir información y tus ideas.
@@ -27,9 +27,7 @@
         </p>
         <p>Suscribete y dale like</p>
       </div>
-      <div id="footer">
-        Blog de práctica en el curso de Git y GitHub.
-      </div>
+      <div id="footer">Blog de práctica en el curso de Git y GitHub.</div>
     </div>
   </body>
 </html>
