Cambio a entidades HTML en vez de tildes

--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
       <div id="post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>
-          Este es el párrafo de inicio donde vamos a explicar las cosas
-          increíbles que se pueden hacer con ramas y solucionar errores.
+          Este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas
+          incre&iacute;bles que se pueden hacer con ramas y solucionar errores.
         </p>
         <p>
-          Los blogs son la mejor forma de compartir información y tus ideas.
-          Mucho más que ir a conferencias o salir en YouTube. Excepto si eres un
-          rockstar. Pero estadísticamente no lo eres... Por ahora.
+          Los blogs son la mejor forma de compartir informaci&oacute;n y tus
+          ideas. Mucho m&aacute;s que ir a conferencias o salir en YouTube.
+          Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo
+          eres... Por ahora.
         </p>
-        <p>Suscribete y dale like</p>
+        <p>Suscr&iacute;bete y dale like</p>
       </div>
-      <div id="footer">Blog de práctica en el curso de Git y GitHub.</div>
+      <div id="footer">
+        Blog de pr&aacute;ctica en el curso de Git y GitHub.
+      </div>
     </div>
   </body>
 </html>
