--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
           incre&iacute;bles que se pueden hacer con ramas y solucionar errores.
         </p>
         <p>
+          <img
+            src="./imagenes/mirador.jpg"
+            alt="mirador alto de las palmas"
+            width="100%"
+            height="400px"
+          />
+        </p>
+        <p>
           Los blogs son la mejor forma de compartir informaci&oacute;n y tus
           ideas. Mucho m&aacute;s que ir a conferencias o salir en YouTube.
           Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo
