stash semi hecho

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
         </p>
         <p>Suscr&iacute;bete y dale like</p>
       </div>
-      <div id="footer">
-        Blog de pr&aacute;ctica en el curso de Git y GitHub.
-      </div>
+      <div id="footer">en el curso de Git y GitHub. (Ensayo de stash)</div>
     </div>
   </body>
 </html>
